@@ -4,9 +4,9 @@ template <class T> T&& declval();
 
 int main()
 {
-  &declval<int>();		        // { dg-error "lvalue" }
-  declval<int>() = declval<int>();	// { dg-error "lvalue" }
-  declval<int>()++;			// { dg-error "lvalue" }
-  --declval<int>();			// { dg-error "lvalue" }
-  declval<int>() += 1;			// { dg-error "lvalue" }
+  &declval<int>();		        // { dg-error "xvalue" }
+  declval<int>() = declval<int>();	// { dg-error "xvalue" }
+  declval<int>()++;			// { dg-error "xvalue" }
+  --declval<int>();			// { dg-error "xvalue" }
+  declval<int>() += 1;			// { dg-error "xvalue" }
 }
