@@ -6,7 +6,7 @@ struct A { int i; };
 template<int t>
 void foo()
 {
-    ((struct A) { 0 }).i += 1;	// { dg-error "lvalue required" }
+    ((struct A) { 0 }).i += 1;	// { dg-error "temporary" }
 }
 
 void g(void)
