@@ -3,6 +3,7 @@
 // temps file
 // Date: Mon, 07 Sep 1992 13:12:28 EDT
 // From: richard@ttt.kth.se 
+// { dg-options "-fpermissive" }
 struct foo
 {
   char *s;
@@ -16,4 +17,4 @@ struct cookie
 };
 
 cookie cat(&foo("apabepa"));// { dg-warning "deprecated conversion" "dep" }
-// { dg-error "lvalue required" "lvalue" { target *-*-* } 18 }
+// { dg-warning "taking address of temporary" "add" { target *-*-* } 19 }
